# Userlib-SML

./: README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  config.json  main.cpp  main.h
app/src/main/cpp/include/Cipher/: Cipher.h  CipherUtils.h
app/src/main/cpp/include/iconloader/: IconLoader.h
app/src/main/cpp/include/imgui/: imgui.h  imgui_internal.h  imstb_truetype.h
app/src/main/cpp/includes/KittyMemory/: KittyMemory.h  KittyUtils.h
app/src/main/cpp/includes/cipher/: Cipher.h  CipherHook.h  CipherPatch.h  cipher.cpp  cipher.h
app/src/main/java/com/cipher/userlib/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
